--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-plugin-import": "^1.13.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
+    "jwt-decode": "^3.1.2",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "typescript": "~4.1.5"
