--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.15.1",
     "jsonwebtoken": "^8.5.1",
+    "menu-header-ui": "^0.1.2",
     "moment": "^2.29.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.8"
