--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "core-js": "^3.15.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
-    "sara-menu-header-ui": "^0.1.0",
+    "menu-header-component": "^0.1.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.8"
   },
