--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "axios": "^0.21.1",
     "core-js": "^3.15.1",
     "jsonwebtoken": "^8.5.1",
-    "moment": "^2.29.1",
     "menu-header-component": "^0.2.1",
+    "moment": "^2.29.1",
+    "task-flow-ui": "^0.1.4",
     "vue": "^3.0.0",
     "vue-router": "^4.0.8"
   },
@@ -31,10 +32,12 @@
     "@vue/eslint-config-typescript": "^7.0.0",
     "babel-plugin-import": "^1.13.3",
     "eslint": "^6.7.2",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
     "jwt-decode": "^3.1.2",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "prettier": "^2.2.1",
     "typescript": "~4.1.5"
   }
 }
