--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "jsonwebtoken": "^8.5.1",
     "menu-header-component": "^0.2.1",
     "moment": "^2.29.1",
+    "monaco-editor": "^0.26.1",
+    "monaco-editor-webpack-plugin": "^4.1.1",
     "task-flow-ui": "^0.1.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.8"
